--- a/api-change-history/000.sample.md
+++ b/api-change-history/000.sample.md
@@ -4,28 +4,36 @@
 
 变动目标版本：v1.0.2
 
+***
 
 接口：/api/v1/sample/test
 
 
 变动前：
+```javascript
 post body:
 {
     result: "ok"
 }
-
+```
 
 变动后：
+```javascript
 post body:
 {
     resultvvv: "ok"
 }
+```
 
+***
 
 对web端的影响分析：
 
 
 对App端的影响分析：
+
+
+***
 
 
 变动发起人：Alice
