--- a/api-change-history/000.sample.md
+++ b/api-change-history/000.sample.md
@@ -46,3 +46,13 @@ App端开发人员：Tom
 
 
 测试工程师：John
+
+
+1、2、3都是变更. 
+1. 删除字段  
+2. 原有字段的解释发生变化 -> app代码要改  
+3. 不是因为满足新需求，而添加了一个字段. 
+  
+4不是变更. 
+4. 为了满足新需求，而添加了一个字段. 
+
